infra/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-backend
  template:
    metadata:
      labels:
        app: fastapi-backend
    spec:
      containers:
      - name: fastapi-backend
        image: gcr.io/my-fastapi-demo-490623/fastapi-backend:latest
        ports:
        - containerPort: 8080
